empezando a hacer header y footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Hurrian</title>
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="Logo Hurrian">
+        <div class="field" id="buscador">
+            <input type="text" id="searchterm" placeholder="Buscar en Hurrian" />
+            <button type="button" id="search">Buscar</button>
+        </div>
+    </header>
+    <footer>Canorio, Mainardi, Bucciero</footer>
 </body>
 </html>
