--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 <body>
     <header>
         <img src="" alt="Logo Hurrian">
-        <div class="field" id="buscador">
+        <div>
             <input type="text" id="searchterm" placeholder="Buscar en Hurrian" />
             <button type="button" id="search">Buscar</button>
         </div>
+        <p> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
     </header>
+
+    <h1>La canción más popular de esta semana!</h1>
+
+
+
+
     <footer>Canorio, Mainardi, Bucciero</footer>
 </body>
 </html>
