actualizando css y detail track

--- a/detail_track.html
+++ b/detail_track.html
@@ -19,12 +19,15 @@
         </header>
         <h1>Alone</h1>
         <img src="./img/Album.cover.halsey.jpg" alt="Album Hopeless Fountain Kingdom">
-        <h3>Alone</h3>
+        <h3>Eyes Closed</h3>
         <h4>Halsey</h4>
         <h4>Album: Hopeless Fountain Kingdom (2017)</h4>
-        <h4><i class="far fa-play-circle"></i> Escuchar "Alone"</h4>
-        <h4><i class="fas fa-heart"></i> Agregar a mi playlist</h4>
+        <h4><i class="far fa-play-circle"></i> Escuchar "Eyes Closed"</h4>
+        <h4><i class="fas fa-heart"></i> <a href="">Agregar a mi playlist</a></h4>
         <h4> <a href="">Ver playlist</a></h4>
+        <h3>Ver el video</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/9LhN6E01Mkc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h4>Créditos: Music video by Halsey performing Eyes Closed. (C) 2017 Astralwerks</h4>
 
 
 
