--- a/detail_track.html
+++ b/detail_track.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../proyecto_integrador/css/styles.css">
     <title>Canción</title>
 </head>
 <body>
@@ -17,10 +19,10 @@
             </div>
             <p> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
         </header>
-        <h1>Alone</h1>
-        <img src="./img/Album.cover.halsey.jpg" alt="Album Hopeless Fountain Kingdom">
-        <h3>Eyes Closed</h3>
-        <h4>Halsey</h4>
+        <h1 class="song">Alone</h1>
+        <img class="albumcover" src="./img/Album.cover.halsey.jpg" alt="Album Hopeless Fountain Kingdom">
+        <h3 class="eyes">Eyes Closed</h3>
+        <h4 class="halsey">Halsey</h4>
         <h4>Album: Hopeless Fountain Kingdom (2017)</h4>
         <h4><i class="far fa-play-circle"></i> Escuchar "Eyes Closed"</h4>
         <h4><i class="fas fa-heart"></i> <a href="">Agregar a mi playlist</a></h4>
