--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="text" id="searchterm" placeholder="Buscar en Hurrian" />
             <button type="button" id="search">Buscar</button>
         </div>
-        <p> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
+        <p class="header"> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
     </header>
 
     <h1>La canción más popular de esta semana!</h1>
