termine la base de la página de géneros (agregué cumbia, bossa nova, indie , rock alternativo y reggae)

--- a/genres.html
+++ b/genres.html
@@ -61,12 +61,27 @@
             <img src="./img/fondo.generos.rock.nacional.jpg" alt="rock naiconal argentino imagen">
             <h4>Rock Nacional Argentino</h4>
         </article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
+        <article>
+            <img src="./img/fondo.generos.rock.alternativo.jpg" alt="rock alternativo imagen">
+            <h4>Rock Alternativo</h4>
+        </article>
+        <article>
+            <img src="./img/fondo.generos.reggae.jpg" alt="reggae">
+            <h4>Reggae</h4>
+        </article>
+        <article>
+            <img src="./img/fondo.generos.indie.jpg" alt="indie imagen">
+            <h4>Indie</h4>
+        </article>
+        <article>
+            <img src="./img/fondo.generos.bossa.nova.jpg" alt="bossa nova imagen">
+            <h4>Bossa Nova</h4>
+        </article>
+        <article>
+            <img src="./img/fondo.generos.cumbia.jpg" alt="cumbia imagen">
+            <h4>Cumbia</h4>
+        </article>
+       
 
 
 
