--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="header"> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
     </header>
 
-    <h1>La canción más popular de esta semana!</h1>
+    <h1>¡La canción más popular de esta semana!</h1>
 
 
 
