modifique imagen de pop en generos

--- a/genres.html
+++ b/genres.html
@@ -19,7 +19,7 @@
 
     <h1>Encontrá el género que más te guste</h1>
         <article>
-            <img src="./img/Album.cover.halsey.jpg" alt="pop image">
+            <img src="./img/fondo.generos.pop.jpg" alt="pop image">
             <h4>Pop</h4>
         </article>
         <article> 
@@ -29,7 +29,6 @@
          <article>
             <img src="./img/fondo.generos.rnb.jpg" alt="r and b image">
             <h4>R&B</h4>
-
         </article>
         <article>
             <img src="./img/fondo.generos.rock.jpg" alt="rock imagen">
@@ -50,12 +49,10 @@
         <article>
             <img src="./img/fondo.generos.punk.jpg" alt="pung imagen">
             <h4>Punk</h4>
-
         </article>
         <article>
             <img src="./img/fondo.generos.techno.jpg" alt="techno imagen">
             <h4>Techno</h4>
-
         </article>
         <article>
             <img src="./img/fondo.generos.rock.nacional.jpg" alt="rock naiconal argentino imagen">
@@ -87,6 +84,6 @@
 
 
 
-
+        <footer>Canorio, Mainardi, Bucciero</footer>
 </body>
 </html>
