--- a/detail_track.html
+++ b/detail_track.html
@@ -13,23 +13,18 @@
     <body>
         <header>
                 <img src="" alt="Logo Hurrian">
-                <div>
-                    <input type="text" id="searchterm" placeholder="Buscar en Hurrian" />
-                    <button type="button" id="search">Buscar</button>
-                </div>
                 <p class="header"> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
         </header>
         <section class="track">
             <h1 class="song">Eyes closed</h1>
-            <aside>
-                <img src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="ALBUM COVER">
-            </aside>
             <h4 class="halsey">Artista: Halsey</h4>
             <h4 class="halsey">Album: Hopeless Fountain Kingdom (2017)</h4>
             <h4 class="halsey"><i class="far fa-play-circle"></i> Escuchar "Eyes Closed"</h4>
             <h4 class="halsey"><i class="fas fa-heart"></i> <a class="hal" href="">Agregar a mi playlist</a></h4>
             <h4 class="halsey"> <a class="hal" href="">Ver playlist</a></h4>
+            <img src="../proyecto_integrador/img/fondo.generos.pop.jpg" alt="">
         </section>
+        
         <section class="track2">
             <h3 class="eyes" >Ver el video</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9LhN6E01Mkc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
