css de detailtrack

--- a/detail_track.html
+++ b/detail_track.html
@@ -13,24 +13,33 @@
     <body>
         <header>
                 <img src="" alt="Logo Hurrian">
-                <p class="header"> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
+                <p class="header"> <a href="index.html"> Home | </a> <a href="genres.html"> Géneros | </a> <a href="">Mi playlist</a></p>
         </header>
-        <section class="track">
+
+        <section class="eyesclosed">
             <h1 class="song">Eyes closed</h1>
-            <h4 class="halsey">Artista: Halsey</h4>
-            <h4 class="halsey">Album: Hopeless Fountain Kingdom (2017)</h4>
-            <h4 class="halsey"><i class="far fa-play-circle"></i> Escuchar "Eyes Closed"</h4>
-            <h4 class="halsey"><i class="fas fa-heart"></i> <a class="hal" href="">Agregar a mi playlist</a></h4>
-            <h4 class="halsey"> <a class="hal" href="">Ver playlist</a></h4>
-            <img src="../proyecto_integrador/img/fondo.generos.pop.jpg" alt="">
         </section>
-        
+
+        <section class="track">
+            <div class="img">
+                <img width="400px"   src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Halsey Album Cover">
+            </div>
+            <div class="sey">
+                <h4 class="halsey">Artista: Halsey</h4>
+                <h4 class="halsey">Album: Hopeless Fountain Kingdom (2017)</h4>
+                <h4 class="halsey"><a class="hal" href="https://www.youtube.com/watch?v=9LhN6E01Mkc"> <i class="far fa-play-circle"></i> Escuchar "Eyes Closed"</a></h4>
+                <h4 class="halsey"><i class="far fa-heart"></i><a class="hal" href=""> Agregar a mi playlist</a></h4>
+                <h4 class="halsey"> <a class="si2" href="">Ver playlist</a></h4>
+            </div>
+
+        </section>
         <section class="track2">
-            <h3 class="eyes" >Ver el video</h3>
+            <h3 class="eyes" ><i class="fab fa-youtube"></i> Video de YouTube</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9LhN6E01Mkc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h4 class="halsey" >Créditos: Music video by Halsey performing Eyes Closed. (C) 2017 Astralwerks</h4>
+            <h6 class="creds" >Créditos: Music video by Halsey performing Eyes Closed. (C) 2017 Astralwerks</h4>
         </section>
     
-        <footer>Canorio, Mainardi, Bucciero</footer>
+        <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados | Contacto: Carolina Canorio, Quillen Bucciero, Franco Mainardi </footer>
+
 </body>
 </html>
