--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../proyecto_integrador/css/styles.css">
     <title>Hurrian</title>
 </head>
 <body>
     <header>
         <img src="" alt="Logo Hurrian">
-        <p class="header"> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
+        <p class="header"> <a href="index.html"> Home | </a> <a href="genres.html"> Géneros | </a> <a href="">Mi playlist</a></p>
     </header>
 
     <h1>¡La canción más popular de esta semana!</h1>
 
 
 
-
-    <footer>Canorio, Mainardi, Bucciero</footer>
+    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados | Contacto: Carolina Canorio, Quillen Bucciero, Franco Mainardi </footer>
 </body>
 </html>
