--- a/genres.html
+++ b/genres.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="../proyecto_integrador/css/styles.css">
-    <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title>Géneros</title>
 </head>
 <body>
     <header>
@@ -76,12 +76,9 @@
             <img src="./img/fondo.generos.cumbia.jpg" alt="cumbia imagen">
             <h4>Cumbia</h4>
         </article>
-       
 
-
-
-
-
-        <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados | Contacto: Carolina Canorio, Quillen Bucciero, Franco Mainardi </footer>
+    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
+            Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
+    </footer>
 </body>
 </html>
