--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <h1>¡La canción más popular de esta semana!</h1>
 
-
-
-    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados | Contacto: Carolina Canorio, Quillen Bucciero, Franco Mainardi </footer>
+    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
+        Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
+    </footer>
 </body>
 </html>
