cree pagina detail-genres, agregue clases en los articulosd

--- a/genres.html
+++ b/genres.html
@@ -4,81 +4,88 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="../proyecto_integrador/css/styles.css">
-    <title>Géneros</title>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Document</title>
 </head>
-<body>
+<body class="generos">
     <header>
         <img src="" alt="Logo Hurrian">
-        <p> <a href="index.html"> Home | </a> <a href="genres.html"> Géneros | </a> <a href="">Mi playlist</a></p>
+        <div>
+            <input type="text" id="searchterm" placeholder="Buscar en Hurrian" />
+            <button type="button" id="search">Buscar</button>
+        </div>
+        <p> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
     </header>
 
-    <h1>Encontrá el género que más te guste</h1>
-        <article>
-            <img src="./img/fondo.generos.pop.jpg" alt="pop image">
-            <h4>Pop</h4>
+    <h1 class="generos">Encontrá el género que más te guste</h1>
+        <article class="generos">
+           <a href="detail-genres.html"><img src="./img/fondo.generos.pop.jpg" alt="pop image"></a>
+           <a href="detail-genres.html"><h4>Pop</h4></a>
         </article>
-        <article> 
-            <img src="./img/fondo.generos.electronica.png" alt="electrónica image">
-            <h4>Electrónica</h4>
+        <article class="generos"> 
+            <a href="detail-genres.html"><img src="./img/fondo.generos.electronica.png" alt="electrónica image"></a> 
+            <a href="detail-genres.html"><h4>Electrónica</h4></a> 
         </article>
-         <article>
-            <img src="./img/fondo.generos.rnb.jpg" alt="r and b image">
-            <h4>R&B</h4>
+         <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.rnb.jpg" alt="r and b image"></a> 
+            <a href="detail-genres.html"><h4>R&B</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.rock.jpg" alt="rock imagen">
-            <h4>Rock</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.rock.jpg" alt="rock imagen"></a> 
+            <a href="detail-genres.html"><h4>Rock</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.rap.jpg" alt="rap imagen">
-            <h4>Rap</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.rap.jpg" alt="rap imagen"></a> 
+            <a href="detail-genres.html"><h4>Rap</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.metal.jpg" alt="metal imagen">
-            <h4>Metal</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.metal.jpg" alt="metal imagen"></a> 
+            <a href="detail-genres.html"><h4>Metal</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.reggaeton.jpg" alt="reggaeton imagen">
-            <h4>Reggaeton</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.reggaeton.jpg" alt="reggaeton imagen"></a> 
+            <a href="detail-genres.html"><h4>Reggaeton</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.punk.jpg" alt="pung imagen">
-            <h4>Punk</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.punk.jpg" alt="punk imagen"></a>
+            <a href="detail-genres.html"><h4>Punk</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.techno.jpg" alt="techno imagen">
-            <h4>Techno</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.techno.jpg" alt="techno imagen"></a> 
+            <a href="detail-genres.html">  <h4>Techno</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.rock.nacional.jpg" alt="rock naiconal argentino imagen">
-            <h4>Rock Nacional Argentino</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.rock.nacional.jpg" alt="rock naiconal argentino imagen"></a> 
+            <a href="detail-genres.html"><h4>Rock Nacional Argentino</h4></a>  
         </article>
-        <article>
-            <img src="./img/fondo.generos.rock.alternativo.jpg" alt="rock alternativo imagen">
-            <h4>Rock Alternativo</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.rock.alternativo.jpg" alt="rock alternativo imagen"></a> 
+            <a href="detail-genres.html"><h4>Rock Alternativo</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.reggae.jpg" alt="reggae">
-            <h4>Reggae</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.reggae.jpg" alt="reggae"></a> 
+            <a href="detail-genres.html"><h4>Reggae</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.indie.jpg" alt="indie imagen">
-            <h4>Indie</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.indie.jpg" alt="indie imagen"></a> 
+            <a href="detail-genres.html"><h4>Indie</h4></a>  
         </article>
-        <article>
-            <img src="./img/fondo.generos.bossa.nova.jpg" alt="bossa nova imagen">
-            <h4>Bossa Nova</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.bossa.nova.jpg" alt="bossa nova imagen"></a> 
+            <a href="detail-genres.html"><h4>Bossa Nova</h4></a> 
         </article>
-        <article>
-            <img src="./img/fondo.generos.cumbia.jpg" alt="cumbia imagen">
-            <h4>Cumbia</h4>
+        <article class="generos">
+            <a href="detail-genres.html"><img src="./img/fondo.generos.cumbia.jpg" alt="cumbia imagen"></a> 
+            <a href="detail-genres.html"><h4>Cumbia</h4></a> 
         </article>
+       
 
-    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
-            Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
-    </footer>
+
+
+
+
+        <footer>Canorio, Mainardi, Bucciero</footer>
 </body>
 </html>
