cree pagina detalle genero, subi las imagenes de los logos e hice la estructura base de pagina detail_genres

--- a/genres.html
+++ b/genres.html
@@ -11,7 +11,7 @@
 </head>
 <body class="generos">
     <header>
-        <img src="" alt="Logo Hurrian">
+        <img width="50px" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
         <div>
             <input type="text" id="searchterm" placeholder="Buscar en Hurrian" />
             <button type="button" id="search">Buscar</button>
