modifique una imagen en pagina detalle de genero

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -102,7 +102,7 @@
 
                  <div class="artistas_detail_genres">
                      <div class="artistas_detail_genres_image">
-                            <a href="./detail_artist.html"><img src="./img/halsey.jpg" alt="artista imagen"></a>
+                            <a href="./detail_artist.html"><img width="219px" src="./img/detalle.genero.artista.helsey.jpg" alt="artista imagen"></a>
 
                              <a href="./detail_artist.html"><h4>Helsey</h4></a>
                 </div>
