--- a/detail-genres.html
+++ b/detail-genres.html
@@ -11,7 +11,7 @@
 </head>
 <body class="detalle.genero">
     <header>
-        <img width="50px" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
+        <img width="50px" class="logo" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
         <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
     </header> 
 
