--- a/detail_track.html
+++ b/detail_track.html
@@ -12,8 +12,8 @@
 <body>
     <body>
         <header>
-                <img src="" alt="Logo Hurrian">
-                <p class="header"> <a href="index.html"> Home | </a> <a href="genres.html"> Géneros | </a> <a href="">Mi playlist</a></p>
+            <img width="50px" class="logo" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
+            <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
         </header>
 
         <section class="eyesclosed">
