--- a/genres.html
+++ b/genres.html
@@ -11,12 +11,8 @@
 </head>
 <body class="generos">
     <header>
-        <img width="50px" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
-        <div>
-            <input type="text" id="searchterm" placeholder="Buscar en Hurrian" />
-            <button type="button" id="search">Buscar</button>
-        </div>
-        <p> <a href="index.html"> Home | </a> <a href=""> Géneros | </a> <a href="">Mi playlist</a></p>
+        <img width="50px" class="logo" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
+        <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
     </header>
 
     <h1 class="generos">Encontrá el género que más te guste</h1>
