termine detailalbum y detalle de home

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
             <h1 class="prese">HURRIAN</h1>
             <h3 class="presen">La mejor música en un lugar</h3>
         </section>
-        <section class="artistas">
-            <img class="artist" src="../proyecto_integrador/img/fondo.generos.cumbia.jpg" alt="">
-            <img class="artist"src="../proyecto_integrador/img/fondo.generos.cumbia.jpg" alt="">
-            <img class="artist" src="../proyecto_integrador/img/fondo.generos.cumbia.jpg" alt="">
-            <img class="artist"src="../proyecto_integrador/img/fondo.generos.cumbia.jpg" alt="">
-            <img class="artist"src="../proyecto_integrador/img/fondo.generos.cumbia.jpg" alt="">
+        <section class="canciones">
+            <h2>Canciones</h2>
+            <a href="detail_track.html"><img width="219" src="../proyecto_integrador/img/eyesclosedcancion.jpg" alt="Eyes Closed"></a>
+            <a href="detail_track.html"><img width="219" src="../proyecto_integrador/img/detalle.genero.ariana.jpg" alt="Positions"></a>
         </section>
     
     
