adelante el css de la pgina detalle de genero

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -9,16 +9,17 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>detail-genres</title>
 </head>
-<body class="detalle.genero">
+<body class="detalle_genero">
     <header>
-        <img width="50px" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
+        <img width="50px" src="./img/logo.hurrian.blanco.png" alt="Logo Hurrian">
         <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
     </header> 
 
-    <h1 class="detail.genres"> POP </h1>
+    <h1 class="detail_genres"> POP </h1>
 
+    <h2 class="detail_genres">Álbumes recomendados</h2>
         <div class="contenedor_detail_genres_albumes">
-            <h2 class="detail_genres">Álbumes recomendados</h2>
+            
 
               <div class="albumes_detail_genres">
 				    <div class="albumes_detail_genres_image">
@@ -78,9 +79,9 @@
 
         </div>
    
-        
+        <h2 class="detail_genres">Artistas recomendados </h2>
         <div class="contenedor_detail_genres_artistas">
-             <h2 class="detail_genres">Artistas recomendados </h2>
+
 
                 <div class="artistas_detail_genres">
                      <div class="artistas_detail_genres_image">
@@ -95,7 +96,7 @@
                     <div class="artistas_detail_genres_image">
                                  <a href="./detail_artist.html"><img src="./img/detalle.genero.artista.ariana.jpg" alt="artista imagen"></a>
  
-                                <a href="./detail_artist.html"><h4>Ariana Grande</h4></a>
+                                 <a href="./detail_artist.html"><h4>Ariana Grande</h4></a>
                     </div>
 
                </div>  
@@ -105,19 +106,22 @@
                             <a href="./detail_artist.html"><img width="219px" src="./img/detalle.genero.artista.helsey.jpg" alt="artista imagen"></a>
 
                              <a href="./detail_artist.html"><h4>Helsey</h4></a>
+                     </div>   
+
                 </div>
+
                 <div class="artistas_detail_genres">
                     <div class="artistas_detail_genres_image">
                              <a href="./detail_artist.html"><img src="./img/genero.detalle.artista.theweeknd.jpg" alt="artista imagen"></a>
 
-                               <a href="./detail_artist.html"><h4>The Weeknd/h4></a>
+                             <a href="./detail_artist.html"><h4>The Weeknd</h4></a>
                     </div>
 
                </div>  
 
                  <div class="artistas_detail_genres">
                      <div class="artistas_detail_genres_image">
-                        <a href="./detail_artist.html"><img src="./img/detalle.genero.artista.taylor.jpg" alt="artista imagen"></a> 
+                             <a href="./detail_artist.html"><img src="./img/detalle.genero.artista.taylor.jpg" alt="artista imagen"></a> 
 
                              <a href="./detail_artist.html"><h4>Taylor Swift</h4></a>
                 </div>
