termine primer boceto pagina genero de detalle

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -11,17 +11,14 @@
 </head>
 <body class="detalle_genero">
     <header>
-<<<<<<< HEAD
-        <img width="50px" src="./img/logo.hurrian.blanco.png" alt="Logo Hurrian">
-=======
-        <img width="50px" class="logo" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
->>>>>>> 98ce93eb2591e753d8502b9af0f5e948ea3935f2
+
+        <img width="60px" src="./img/logo.hurrian.blanco.png" alt="Logo Hurrian">
         <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
     </header> 
 
-    <h1 class="detail_genres"> POP </h1>
+    <h1 class="detail_genres_tp"> Lo mejor del Pop </h1>
 
-    <h2 class="detail_genres">Álbumes recomendados</h2>
+    <h1 class="detail_genres">Álbumes recomendados</h1>
         <div class="contenedor_detail_genres_albumes">
             
 
@@ -83,7 +80,7 @@
 
         </div>
    
-        <h2 class="detail_genres">Artistas recomendados </h2>
+        <h1 class="detail_genres">Artistas recomendados </h1>
         <div class="contenedor_detail_genres_artistas">
 
 
