cambios en el footer de generos

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -48,7 +48,7 @@
 				    <div class="albumes_detail_genres_image">
 					    <a href="./detail_album"><img src="./img/fondo.generos.pop.jpg" alt="album imagen"></a>
 
-                             <a href="./detail_artist.html"><h5>Helsey</h5></a>
+                             <a href="./detail_artist.html"><h5>Halsey</h5></a>
 
                              <a href="./detail_album.html"><h4>Hopeless Fountain Kingdom</h4></a>
 				    </div>
@@ -106,7 +106,7 @@
                      <div class="artistas_detail_genres_image">
                             <a href="./detail_artist.html"><img width="219px" src="./img/detalle.genero.artista.helsey.jpg" alt="artista imagen"></a>
 
-                             <a href="./detail_artist.html"><h4>Helsey</h4></a>
+                             <a href="./detail_artist.html"><h4>Halsey</h4></a>
                      </div>   
 
                 </div>
@@ -142,11 +142,9 @@
 
 
 
-
-
-
-
-
-    <footer>Canorio, Mainardi, Bucciero</footer>
+    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
+            Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
+    </footer>
+   
 </body>
 </html>
