--- a/genres.html
+++ b/genres.html
@@ -206,6 +206,8 @@
 
 
 
-        <footer>Canorio, Mainardi, Bucciero</footer>
+    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
+        Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
+    </footer>
 </body>
 </html>
