cambios en el menu,buscador

--- a/detail_track.html
+++ b/detail_track.html
@@ -10,10 +10,16 @@
     <title>Canción</title>
 </head>
 <body>
-        <header>
-            <img width="50px" class="logo" src="./img/logo.hurrian.negro.png" alt="Logo Hurrian">
+
+    <header>
+        <form action="search-results.html" method="GET">
+            <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
+            <button type="submit">Buscar</button>
+        </form>
+        <div class="menu">
             <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
-        </header>
+        </div>
+    </header>
 
         <section class="eyesclosed">
             <h1 class="song">Eyes closed</h1>
