--- a/genres.html
+++ b/genres.html
@@ -11,8 +11,13 @@
 </head>
 <body class="generos">
     <header>
-        <img width="60px" class="logo" src="./img/logo.hurrian.blanco.png" alt="Logo Hurrian">
-        <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
+        <form action="search-results.html" method="GET">
+            <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
+            <button type="submit">Buscar</button>
+        </form>
+        <div class="menu">
+            <p><a class="pre" href="index.html">  Home  </a><a class="pre2"  href="genres.html">  Géneros  </a><a  class="pre3" href="">  Mi playlist  </a></p>
+        </div>
     </header>
 
     <h1 class="generos">Encontrá el género que más te guste</h1>
