adelanté trabajo de la home

--- a/genres.html
+++ b/genres.html
@@ -182,8 +182,8 @@
             <div class="genres">
                 <div class="genres_image">
 
-                     <a href="detail-genres.html"><img src="./img/fondo.generos.cumbia.jpg" alt="cumbia image"></a>
-                     <a href="detail-genres.html"><h4>Cumbia</h4></a>
+                     <a href="detail-genres.html"><img src="./img/fondo.generos.urbano.jpg" alt="cumbia image"></a>
+                     <a href="detail-genres.html"><h4>Urbano</h4></a>
 
                 
                 </div>
