--- a/genres.html
+++ b/genres.html
@@ -194,7 +194,7 @@
             <div class="genres">
                 <div class="genres_image">
 
-                     <a href="detail-genres.html"><img width="225px" src="./img/fondo.generos.hip.hop.jpg" alt="hip hop image"></a>
+                     <a href="detail-genres.html"><img width="225px" src="./img/fondo.generos.hiphop.jpg" alt="hip hop image"></a>
                      <a href="detail-genres.html"><h4>Hip Hop</h4></a>
 
                 
