agregue los tres puntito

--- a/playlist.html
+++ b/playlist.html
@@ -49,7 +49,7 @@
     <div class="music-box">
         <div class="music-info">
             <div class="music-img">
-                <img src="../playlist/img/halsey.jpg" width="100px">
+                <img src="img/Album.cover.halsey.jpg" width="100px">
              </div>
              <div class="music-name">
                 <h6>Single Song Title</h6>
