agruege cosas a playlist

--- a/playlist.html
+++ b/playlist.html
@@ -24,17 +24,17 @@
         </div>
     </header>
 
-    <div class="music-container">
+    <section class="music-container">
     <div class="music-header">
         <i class="fa fa-angle-left"></i>
-    <div class="title">
+    <article class="title">
         <p>
         Playlist
         </p>
         <i class="fa fa-search"></i>
+    </article>
     </div>
-    </div>
-    <div class="music-playlist">
+    <aside class="music-playlist">
     <div class="music-menu text-center">
         <div class="manu">
             <ul>
@@ -45,7 +45,7 @@
             </ul>
         </div>
     </div>
-    </div>
+    </aside>
     <div class="music-box">
         <div class="music-info">
             <div class="music-img">
@@ -55,9 +55,10 @@
                 <h6>Single Song Title</h6>
                 <p>Single Music Name and Director</p>
              </div>
+             <i class="fa fa-ellipsis-v"></i>
         </div>    
     </div>
-    </div>
+    </section>
     <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
         Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
     </footer>
