mejorando calidad de imagenes

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -62,9 +62,9 @@
 
                 <div class="albumes_detail_genres">
 				    <div class="albumes_detail_genres_image">
-					    <a href="detail_album.html"><img src="./img/detalle.genero.theweeknd.jpg" alt="album imagen"></a>
+					    <a href="detail_album.html"><img src="./img/detalle.genero.theweekend.jpg" alt="album imagen"></a>
 
-                             <a href="./detail_artist.html"><h5>The Weeknd</h5></a>
+                             <a href="detail_artist.html"><h5>The Weeknd</h5></a>
 
                              <a href="detail_album.html"><h4>After Hours</h4></a>
 				    </div>
