hice el responsive mobile de la home, géneros y detalle de géneros

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -26,7 +26,7 @@
     </header>
 
     <!--título principal-->
-    <h1 class="genres_titulo"> Lo mejor del Pop </h1>
+    <h1 class="genres_titulo"> Lo mejor del POP </h1>
 
 
     <!--albumes-->
